# sports-probabilistic-forecasting

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dvc.yaml  main.py  pyproject.toml  ruff.toml
.dvc/: config
conf/: data_clean.yaml  features_basic.yaml  predict_catboost.yaml  train_catboost.yaml
conf/mlflow/: mlflow.yaml
docs/source/: conf.py  index.rst  installation.rst  quickstart.rst
docs/source/api/: data.rst  features.rst  index.rst  utils.rst
sports_forecast/: predict.py  train.py
sports_forecast/data/: clean.py  download_demo.py  ingest.py
sports_forecast/features/: __init__.py  clean.py  features_build.py
sports_forecast/utils/: __init__.py  logging.py
